完善公共基础部分

--- a/01_基础.ipynb
+++ b/01_基础.ipynb
@@ -330,7 +330,7 @@
     "```python\n",
     "input(提示字符串)\n",
     "```\n",
-    "注意：input()返回所有用户输入为一整个str，如果期望用户同时输入多个值，需要对字符串进行分隔，而如同`x, y = input(\"Enter two numbers: \")`是不行的"
+    "注意：input()返回所有用户输入为一整个str，如果期望用户同时输入多个值，需要对字符串进行分割，而如同`x, y = input(\"Enter two numbers: \")`是不行的"
    ]
   }
  ],
