--- a/Python标准库及第三方库/turtle.ipynb
+++ b/Python标准库及第三方库/turtle.ipynb
@@ -336,12 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 移动画笔到指定位置，以画笔中心为(0, 0)，若此时为下笔状态，则沿轨迹画线\n",
-    "t.goto(200, 200)  # t.setposition()"
+    "t.goto(200, 200)  # t.setposition()\n",
+    "# 移动后的画笔依旧保持之前的方向"
    ]
   },
   {
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
     "radius = 100  # 半径，正数时逆时针画，负数时顺时针画\n",
     "extent = 10  # 圆弧的角度，不提供此参数时画完整的圆\n",
     "\n",
-    "t.circle(radius)\n",
+    "t.circle(radius)  # 画圆的圆心位于画笔的左侧或右侧（与画圆方向有关）\n",
     "t.circle(radius, extent)\n"
    ]
   },
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +447,7 @@
    ],
    "source": [
     "# 直接设定角度（以右为基准逆时针旋转角度）\n",
-    "t.setheading(90)\n",
+    "t.setheading(90)  # t.seth()\n",
     "t.heading()"
    ]
   }
