--- a/Python标准库及第三方库/第三方库名称分类总结.md
+++ b/Python标准库及第三方库/第三方库名称分类总结.md
@@ -1,4 +1,3 @@
-# 第三方库名称按考纲分类总结
 ### 🕷 网络爬虫
 
 | 库名          | 用途介绍                                      | 官网链接 |
@@ -7,8 +6,6 @@
 | BeautifulSoup | 解析 HTML、XML，进行数据提取      | [bs4 doc](https://www.crummy.com/software/BeautifulSoup/) |
 | requests    | 发送 HTTP 请求，获取网页内容      | [requests.readthedocs.io](https://requests.readthedocs.io/en/latest/) |
 | selenium    | 自动化浏览器操作，可用于动态网页爬取 | [selenium.dev](https://www.selenium.dev/) |
-| aiohttp     | 支持异步 HTTP 请求的库            | [aiohttp.readthedocs.io](https://docs.aiohttp.org/en/stable/) |
-
 ---
 
 ### 📊 数据分析
@@ -27,11 +24,13 @@
 
 | 库名       | 用途介绍                           | 官网链接 |
 |-----------|------------------------------|------------|
+| pdfminer   | PDF 文本提取和解析              | [pdfminer-docs](https://pdfminersix.readthedocs.io/en/latest/) |
+| openpyxl   | 处理 Excel（.xlsx）文件         | [openpyxl-docs](https://openpyxl.readthedocs.io/en/stable/) |
+| python-docx | 处理 Word（.docx）文档         | [python-docx](https://python-docx.readthedocs.io/en/latest/) |
+| SnowNLP   | 处理中文文本，支持情感分析、分词等  | [SnowNLP GitHub](https://github.com/isnowfy/snownlp) |
 | NLTK      | 自然语言处理工具包               | [nltk.org](https://www.nltk.org/) |
-| spaCy     | 高效 NLP 处理库，支持多语言      | [spacy.io](https://spacy.io/) |
-| gensim    | 主题建模、词向量分析（Word2Vec）  | [radimrehurek.com/gensim](https://radimrehurek.com/gensim/) |
-| textblob  | 轻量 NLP 处理，如情感分析        | [textblob.readthedocs.io](https://textblob.readthedocs.io/en/dev/) |
-| transformers | Hugging Face 预训练 NLP 模型库 | [huggingface.co/transformers](https://huggingface.co/transformers) |
+| loso      | 基于机器学习的中文分词库          | [loso GitHub](https://github.com/hankcs/loso) |
+| jieba     | 中文分词库，支持自定义词典        | [jieba GitHub](https://github.com/fxsjy/jieba) |
 
 ---
 
@@ -44,6 +43,8 @@
 | plotly     | 交互式图表，可用于网页展示         | [plotly.com](https://plotly.com/) |
 | bokeh      | 高级交互式可视化工具              | [bokeh.org](https://bokeh.org/) |
 | altair     | 语法简洁的可视化库，适合探索性数据分析 | [altair-viz.github.io](https://altair-viz.github.io/) |
+| TVTK       | 基于 VTK 的 3D 可视化封装          | [TVTK Docs](https://docs.enthought.com/mayavi/mayavi/tvtk.html) |
+| mayavi     | 科学计算与 3D 可视化工具，基于 VTK | [mayavi GitHub](https://github.com/enthought/mayavi) |
 
 ---
 
@@ -55,7 +56,7 @@
 | Tkinter   | Python 内置 GUI 库，适合简单应用 | [docs.python.org](https://docs.python.org/3/library/tk.html) |
 | wxPython  | 类似 Windows 原生界面的 GUI 开发 | [wxpython.org](https://wxpython.org/) |
 | Kivy      | 多平台 GUI 库，支持触摸屏开发     | [kivy.org](https://kivy.org/) |
-| PySide    | Qt for Python 官方绑定          | [doc.qt.io](https://doc.qt.io/qtforpython/) |
+| pyGTK     | GTK+ 绑定的 GUI 库，适用于 Linux | [pyGTK Docs](http://www.pygtk.org/) |
 
 ---
 
@@ -68,6 +69,7 @@
 | PyTorch   | Facebook 出品，深度学习库        | [pytorch.org](https://pytorch.org/) |
 | XGBoost   | 高效的梯度提升决策树（GBDT）实现  | [xgboost.ai](https://xgboost.ai/) |
 | LightGBM  | 轻量级 GBDT 库，适合大规模数据    | [lightgbm.readthedocs.io](https://lightgbm.readthedocs.io/en/latest/) |
+| Theano    | 深度学习计算库，适用于 GPU 计算  | [theano-pymc](https://github.com/pymc-devs/Theano-PyMC) |
 
 ---
 
@@ -80,17 +82,17 @@
 | FastAPI   | 高性能异步 Web 框架，适合 API 开发 | [fastapi.tiangolo.com](https://fastapi.tiangolo.com/) |
 | Tornado   | 高并发 Web 框架，适合长连接应用   | [tornadoweb.org](https://www.tornadoweb.org/) |
 | Sanic     | 类似 FastAPI 的高性能异步 Web 框架 | [sanic.dev](https://sanic.dev/) |
+| Pyramid   | 轻量级 Web 框架，灵活扩展性强    | [trypyramid.com](https://trypyramid.com/) |
 
 ---
 
 ### 🎮 游戏开发
 
-| 库名       | 用途介绍                           | 官网链接 |
-|-----------|------------------------------|------------|
-| Pygame    | 2D 游戏开发库                 | [pygame.org](https://www.pygame.org/) |
-| Panda3D   | 3D 游戏引擎，适合 Python 开发 | [panda3d.org](https://www.panda3d.org/) |
-| Godot-Python | Godot 引擎的 Python 绑定    | [godotengine.org](https://godotengine.org/) |
-| Ursina    | 适合初学者的 3D 游戏引擎       | [ursinaengine.org](https://www.ursinaengine.org/) |
-| Arcade    | 现代 2D 游戏开发库，替代 Pygame | [arcade.academy](https://arcade.academy/) |
-
----
+| 库名      | 用途介绍                              | 官网链接 |
+|----------|---------------------------------|------------|
+| Pygame    | 2D 游戏开发库                     | [pygame.org](https://www.pygame.org/) |
+| Panda3D   | 3D 游戏引擎，适合 Python 开发      | [panda3d.org](https://www.panda3d.org/) |
+| Godot-Python | Godot 引擎的 Python 绑定        | [godotengine.org](https://godotengine.org/) |
+| Ursina    | 适合初学者的 3D 游戏引擎           | [ursinaengine.org](https://www.ursinaengine.org/) |
+| cocos2d   | 2D 游戏框架，适用于 Python 和 C++ | [cocos2d-x.org](https://www.cocos.com/en/) |
+| Arcade    | 现代 2D 游戏开发库，替代 Pygame   | [arcade.academy](https://arcade.academy/) |
