--- a/公共基础/01_计算机系统.md
+++ b/公共基础/01_计算机系统.md
@@ -1,7 +1,7 @@
 # 计算机系统
 ### 计算机的发展
-- **ENIAC：** 第一台电子计算机，1946年，美国宾夕法尼亚大学
-- **EDVAC：** 第一台存储程序的计算机，冯·诺依曼，“现代电子计算机之父”
+- **ENIAC：** 第一台电子计算机 **（电子管）** ，1946年，美国宾夕法尼亚大学
+- **EDVAC：** 第一台**存储程序**的计算机，冯·诺依曼，“现代电子计算机之父”
   - 用**二进制**表示指令和数据
   - **存储预先编好的程序**
   - 冯·诺依曼结构：**运算器、存储器、控制器、输入设备、输出设备**
@@ -11,34 +11,33 @@
   3. 中小规模集成电路
   4. 大规模&超大规模集成电路
 ### 计算机硬件系统
-- 中央处理器（CPU）：分为控制器和运算器，性能与品质由主频和字长决定
-- 存储器：
-  - 寄存器：CPU内部，容量最小，存取速度非常快
-  - 高速缓冲存储器（缓存）：内存与CPU之间，容量小，存取速度比内存快得多，解决内存与CPU之间速度不匹配
-  - 主存储器（内存）：
-    - 随机存储器（RAM）
-    - 只读存储器（ROM）：生产时预先写入，不可更改
-  - 辅助存储器（外存）：硬盘、光盘等，CPU不能直接访问，必须要调用到内存中
-- 输入/输出设备
-- 总线：各部件之间传送信息的公共通信干线
-  - 片内总线
-  - **系统总线**
-    - 数据总线
-    - 地址总线
-    - 控制总线
-  - 通信总线
+- **中央处理器（CPU）：** 分为**控制器**和**运算器**，性能与品质由主频和字长决定
+- **存储器：**
+  - **寄存器**：CPU内部，容量最小，存取速度非常快
+  - **高速缓冲存储器（缓存）**：内存与CPU之间，容量小，存取速度比内存快得多，解决内存与CPU之间速度不匹配
+  - **主存储器（内存）**：
+    - **随机存储器（RAM）**
+    - **只读存储器（ROM）**：生产时**预先写入**，不可更改
+  - **辅助存储器（外存）**：硬盘、光盘等，CPU不能直接访问，必须要调用到内存中
+- **输入/输出设备**
+- **总线**：各部件之间传送信息的公共通信干线
+  - **片内总线**：CPU内部各部件连接
+  - **系统总线**：连接CPU、内存、I/O设备
+    - 数据总线（**D**B）：负责传输数据，数据总线宽度决定了计算机一次传输的数据位数。
+    - 地址总线（**A**B）：负责传输**内存地址**，地址总线宽度决定最大寻址空间。
+    - 控制总线（**C**B）：负责传输**控制信号**，如读写控制、时钟信号等。
+  - **通信总线**：连接不同计算机或设备之间的通信通道，如USB、PCIe、SATA等。
 ### 信息的表示与存储
-- 存储单位：
-  - 数据的最小单位是位（bit）
-  - 存储容量的基本单位是字节（Byte/B）
-    - 1B = 8bit
-    - 字长：计算机一次能处理的二进制数的bit数
-- 数制：
-  - （二、八、十六进制）→（十进制）：按权展开法
-    - $$ (1011)_2 = 1 \times 2^3 + 0 \times 2^2 + 1 \times 2^1 + 1 \times 2^0 = 8 + 0 + 2 + 1 = 11 $$
-    - $$ (157)_8 = 1 \times 8^2 + 5 \times 8^1 + 7 \times 8^0 = 64 + 40 + 7 = 111 $$
-    - $$ (2F)_{16} = 2 \times 16^1 + F \times 16^0 = 2 \times 16 + 15 \times 1 = 32 + 15 = 47 $$
-  - （十进制）→（二、八、十六进制）：除基取余法
+- **存储单位**：
+  - 数据的最小单位是**位（bit，二进制位）**
+    - 字长：计算机一次能处理的二进制位数，如32位、64位等。
+  - 存储容量的基本单位是**字节（Byte/B）1B = 8bit**
+- **数制**：
+  - （二、八、十六进制）→（十进制）：**按权展开法**
+$$ (1011)_2 = 1 \times 2^3 + 0 \times 2^2 + 1 \times 2^1 + 1 \times 2^0 = 8 + 0 + 2 + 1 = 11 $$
+$$ (157)_8 = 1 \times 8^2 + 5 \times 8^1 + 7 \times 8^0 = 64 + 40 + 7 = 111 $$
+$$ (2F)_{16} = 2 \times 16^1 + F \times 16^0 = 2 \times 16 + 15 \times 1 = 32 + 15 = 47 $$
+  - （十进制）→（二、八、十六进制）：**除基取余法**，除到商为0为止
     
     例：将 $(13)_{10}$ 转换为二进制：
     ```
@@ -48,44 +47,48 @@
     1 ÷ 2  = 0  ... 1  (停止↑)
     ```
     倒序排列余数 **(1101)**，所以 $(13)_{10} = (1101)_2$。
-- 字符编码
-  - ASCII码：
-    - 7位码，共128个字符
-    - 控制运算符<数字<大写字母<小写字母
-    - 小写字母=大写字母+32
-  - 汉字编码：两字节编码
-    1. 区位码：十进制，第一个字节叫做区码(01-94)，第二个字节叫做位码(01-94)，每个区位码都对应着一个唯一的汉字或符号
-    2. 国标码（GB2312 标准码）：十六进制，国标码=区位码+$(2020)_H$
-    3. 机内码：为了避开ASCII码范围，每个字节加上0x80（即十进制128），机内码=国标码+$(8080)_H$
+- **字符编码**
+  - **ASCII码**：
+    - **7**位码，共**128**个字符
+    - 控制运算符<**数字<大写字母<小写字母**
+    - **小写字母=大写字母+32**
+  - **汉字编码**：**两字节**编码
+    1. **区位码**：**十进制**，第一个字节叫做区码(01-94)，第二个字节叫做位码(01-94)，每个区位码都对应着一个唯一的汉字或符号
+    2. **国标码（GB2312 标准码）**：**十六**进制
+        - 国标码=区位码+$(2020)_H$
+    3. **机内码**：为了避开ASCII码范围，每个字节加上**0x80（即十进制128）**
+        - 机内码=国标码+$(8080)_H$
 
 ### 操作系统
-操作系统两个最主要的特征是：并发性、共享性
-- 操作系统的发展
-  - 手工操作：没有操作系统
-  - 批处理系统：自动成批处理作业
-  - 多道程序系统：同时将多个互相独立的程序放到计算机内存中，在管理程序控制下使之相互交叉运行，
-  - 分时系统：多用户交互式操作系统，**时间片轮转策略**
-  - 个人计算机操作系统：联机交互的单用户操作系统
-- 进程管理
-  - 进程：具有一定独立功能的程序关于某个数据集合的一次运行活动
-  - 进程的生命周期：
-    - 创建
-    - 就绪
-    - 运行
-    - 阻塞：一般状态
-    - 终止
-- 存储管理
-  - 连续存储管理：
-    - 固定分区：容易产生内部碎片
-    - 可变分区：容易产生外部碎片
-  - 分页式存储管理：能有效解决碎片问题，但增加硬件成本
-  - 分段式存储管理
-  - 段页式存储管理：结合分页式存储管理和分段式存储管理的优点
-  - 虚拟存储器管理：从逻辑上对内存容量加以扩充，使存储系统拥有接近外存的容量和接近内存的访问速度。
-- 文件管理：文件逻辑组织结构、物理组织结构、目录结构的管理，文件目录是一种数据结构，用来标识系统中的文件及其物理地址
-- I/O设备管理
-  - 硬件
-  - 中断处理程序
-  - 设备驱动程序
-  - 设备无关的I/O软件
-  - 用户程序
+- 操作系统两个最主要的**特征**是
+  1. 并发性：多个程序可同时执行，提高CPU利用率。
+  2. 共享性：多个用户或程序可共享计算机资源。
+- 操作系统的**发展**
+  - **手工操作**：无操作系统
+  - **批处理系统**：自动批量执行作业
+  - **多道程序系统**：多个程序交叉运行，提高CPU利用率
+  - **分时系统**：多个用户轮流使用CPU，**时间片轮转**
+  - **个人计算机操作系统**：联机交互的单用户操作系统
+- **进程管理**
+  - **进程**：具有一定独立功能的程序关于某个数据集合的一次运行活动
+  - **进程的生命周期**：
+    - **创建**：进程被系统创建，并分配资源（如内存、文件等）
+    - **就绪**：进程已经准备好运行，但 CPU 可能正在忙于执行其他任务，需要等待 CPU 调度
+    - **运行**：进程被 CPU 执行，此时它占用 CPU 资源
+    - **阻塞（一般状态）**：进程在等待某个事件（如 I/O 完成、锁释放）时无法运行，被暂时挂起。
+    - **终止**：进程执行完毕或因异常终止，系统回收其资源
+- **存储管理**
+  - **连续存储管理**：
+    - **固定分区**：分区大小固定，容易产生**内部碎片**
+    - **可变分区**：动态调整分区，容易产生**外部碎片**
+  - **分页式存储管理**：内存被划分为大小固定的页框，进程被划分为相同大小的页，并分配到不同的页框中。这种方式减**少了外部碎片**，但需要**页表**来记录映射关系，增加了硬件开销。
+  - **分段式存储管理**：进程被划分为逻辑段（如代码段、数据段、栈段），每个段可以独立存储在不同的物理地址上，方便程序设计，但会**产生外部碎片**。
+  - **段页式存储管理**：结合分页式存储管理和分段式存储管理的优点，先把进程划分为段，每个段再分页存储，提高内存利用率。
+  - **虚拟存储器管理**：允许程序运行时使用比物理内存更大的地址空间，依靠页表和页面置换算法（如 FIFO、LRU）在内存和外存之间进行数据交换，提高内存利用率。
+- **文件管理**：文件逻辑组织结构、物理组织结构、目录结构的管理，文件目录是一种数据结构，用来标识系统中的文件及其物理地址
+- **I/O设备管理**
+  - **硬件**
+  - ⭐**中断处理程序**：当 I/O 设备完成数据传输时，CPU 会收到中断信号，执行相应的中断处理程序，提高系统响应速度。
+  - **设备驱动程序**：驱动程序提供标准化接口，屏蔽底层硬件差异，使操作系统能与各种设备交互。
+  - **设备无关的I/O软件**：提供统一的设备管理接口，如文件系统、设备缓冲区管理。
+  - **用户程序**：用户通过应用程序访问 I/O 设备，如用 Word 编辑文档、用浏览器访问网页。
