--- a/公共基础/02_数据结构与算法.md
+++ b/公共基础/02_数据结构与算法.md
@@ -13,18 +13,25 @@
 - **拥有足够的情报：** 有足够多且正确的输入/初始化信息，且至少有一个输出结果
 ### 算法的复杂度
 时间复杂度和空间复杂度两者之间**没有直接的联系**
-- **时间复杂度：** 算法执行所需的计算工作量（算法语句的执行次数）
+- **时间复杂度：** 算法执行所需的计算工作量（算法语句的**执行次数**）
 - **空间复杂度：** 算法执行所需的存储空间
-  - **程序本身所占空间**
-  - **输入数据所占空间**
+  - **程序本身所占空间**：一般忽略不计
+  - **输入数据所占空间**：压缩数据可以减少空间复杂度。
   - **算法执行过程所需额外空间**
     - 若额外空间不随问题规模变化而变化，则称为**原地工作**的算法
 ### 搜索算法
-
+- 查找
+  - n个元素的任意线性表，**顺序查找**最坏情况比较次数：$n$
+  - n个元素的**有序顺序表**，**二分查找**最坏情况比较次数：$log_2n$
+- 搜索最大/最小值：n个元素的任意线性表最坏情况比较次数：$n-1$
 ### 排序算法
-#### 交换类排序
-#### 选择类排序
-#### 插入类排序
+**最坏情况**下比较次数：
+- 冒泡排序：$\frac{n(n-1)}{2}$
+- 选择排序：
+- 简单插入排序：
+- 快速排序：平均$nlog_2n$，最坏$\frac{n(n-1)}{2}$ ，每次交换可能产生新的逆序。
+- 堆排序：$nlog_2n$
+- 希尔排序：与序列选取有关，最坏$n^{1.5}$
 
 ## 数据结构
 - 是带有**结构**的数据元素的集合，数据元素之间的特殊关系称为**前后件关系**
@@ -38,7 +45,7 @@
   
 - **数据结构的分类：**
   - **逻辑结构：** 反应数据元素之间前后件关系，
-    - **线性结构：** 线性表、栈、队列、向量、矩阵、二维表
+    - **线性结构：** 线性表、栈、队列、向量、矩阵、**二维表**
     - **非线性结构：** 树、二叉树、图、广义表
   - **存储结构（物理结构）：** 逻辑结构在计算机存储空间中的存放形式，
     - **顺序存储：** 顺序表
@@ -72,4 +79,4 @@
   - **循环链表：** 
     - 最后一个结点的指针指向头节点，使整个链表形成一个环
     - 只要知道任一结点的位置，都可以从该结点触发访问表中所有结点。
-    - 表头结点是固有的，即使空表也有表头结点 **（实现空表与非空表运算的统一）**
+    - 必须有一个节点：**表头结点**是固有的，即使空表也有表头结点 **（实现空表与非空表运算的统一）**
