--- a/公共基础/04_程序设计基础.md
+++ b/公共基础/04_程序设计基础.md
@@ -7,10 +7,10 @@ Wirth公式：$程序=算法+数据结构$
 - 输入输出合理化：输入输出尽可能方便用户的使用
 ### 结构化程序设计
 四大基本原则
-- 自顶向下：先总体后细节，先全局后局部
-- 逐步求精：先设计子目标作为过渡，将复杂问题逐步细化
-- 模块化：总目标分解为分目标，进一步分解为小目标（模块）
-- 限制使用goto语句
+- **自顶向下：** 先总体后细节，先全局后局部
+- **逐步求精：** 先设计子目标作为过渡，将复杂问题逐步细化
+- **模块化：** 总目标分解为分目标，进一步分解为小目标（模块）
+- **限制使用goto语句**
 
 三大基本结构：
 - **顺序**结构
