--- a/公共基础/02_数据结构与算法.md
+++ b/公共基础/02_数据结构与算法.md
@@ -21,17 +21,17 @@
     - 若额外空间不随问题规模变化而变化，则称为**原地工作**的算法
 ### 搜索算法
 - 查找
-  - n个元素的任意线性表，**顺序查找**最坏情况比较次数：$n$
-  - n个元素的**有序顺序表**，**二分查找**最坏情况比较次数：$log_2n$
-- 搜索最大/最小值：n个元素的任意线性表最坏情况比较次数：$n-1$
+  - n个元素的任意线性表，**顺序查找**最坏情况比较次数： $n$
+  - n个元素的**有序顺序表**，**二分查找**最坏情况比较次数： $log_2n$
+- 搜索最大/最小值：n个元素的任意线性表最坏情况比较次数： $n-1$
 ### 排序算法
 **最坏情况**下比较次数：
-- 冒泡排序：$\frac{n(n-1)}{2}$
-- 选择排序：
-- 简单插入排序：
-- 快速排序：平均$nlog_2n$，最坏$\frac{n(n-1)}{2}$ ，每次交换可能产生新的逆序。
-- 堆排序：$nlog_2n$
-- 希尔排序：与序列选取有关，最坏$n^{1.5}$
+- 冒泡排序： $\frac{n(n-1)}{2}$
+- 选择排序： $\frac{n(n-1)}{2}$
+- 简单插入排序： $\frac{n(n-1)}{2}$
+- 快速排序：平均 $nlog_2n$ ，最坏 $\frac{n(n-1)}{2}$ ，每次交换可能产生新的逆序。
+- 堆排序： $nlog_2n$
+- 希尔排序：与序列选取有关，最坏 $n^{1.5}$
 
 ## 数据结构
 - 是带有**结构**的数据元素的集合，数据元素之间的特殊关系称为**前后件关系**
