--- a/公共基础/03_栈、队列、二叉树.md
+++ b/公共基础/03_栈、队列、二叉树.md
@@ -6,9 +6,9 @@
 
 对栈$S(1:n)$，最大元素数量为n，初始状态：
 - $top=0$ 或 $top=-1$：以1为底，n为顶
-  - $top=x$时，有$x$个元素
+  - $top=x$时，有 $x$ 个元素
 - $top=n+1$：以n为底，1为顶
-  - $top=x$时，有$n-x+1$个元素
+  - $top=x$时，有 $n-x+1$ 个元素
 ### 带链的栈
 带链的栈实际是一种单向链表，栈顶指针和栈底指针会随栈的操作**动态变化**，入栈操作不会受栈存储空间的限制而发生溢出（**没有最大元素数量限制**）。
 
@@ -24,8 +24,8 @@
   - $front → 队头元素前一个位置$
   - $rear → 队尾元素$
 - 计算循环队列元素个数
-  - $rear > front$ 时，$元素个数=rear-front$
-  - $rear < front$ 时，$元素个数=rear-front+循环队列长度$
+  - $rear > front$ 时， $元素个数=rear-front$
+  - $rear < front$ 时， $元素个数=rear-front+循环队列长度$
   - $rear = front$ 时，循环列表为**空**或**满**（**不能为1个**，因为front要指向前一个）
 ### 带链的队列
 带链的队列实际是一种**单向链表**
@@ -45,16 +45,18 @@
 - **子树：** 以某结点的一个子结点为根构成的树为该结点的一个子树
 ## 树的性质
 设树总共有N个结点，其中度为 $k$ 的结点个数为 $n_k$，则有：
+
 $$n_0+n_1+n_2+…+n_k = N$$
+
 $$0×n_0+1×n_1+2×n_2+…+k×n_k = N-1$$
 
 **例：** 树度为4，度为1、2、3、4的结点个数分别为2、2、3、3，叶子结点数为：
 
-**解：** 叶子结点为度为0的结点，$n+2+2+3+3 = 1*2+2*2+3*3+4*3+1$，$n=18$
+**解：** 叶子结点为度为0的结点， $n+2+2+3+3=1×2+2×2+3×3+4×3+1$ ， $n=18$
 
 **例：** 树度为3，没有度为2的结点，叶子结点数为5，该树中度为3的结点数为：
 
-**解：** 设度为1的结点数为a，为3的结点数为b，$5+a+0+b = 0*5+1*a+2*0+3*b+1$，$b=2$
+**解：** 设度为1的结点数为a，为3的结点数为b， $5+a+0+b=0×5+1×a+2×0+3×b+1$ ， $b=2$
 ## 二叉树的概念
 - 非空二叉树只有一个根节点，每个节点至多有两棵子树
 - **满二叉树：** 每层结点数都达到最大值
@@ -63,8 +65,8 @@ $$0×n_0+1×n_1+2×n_2+…+k×n_k = N-1$$
 - 非空二叉树**第 $k$ 层**上最多有 $2^{k-1}$ 个结点
 - 深度为k的二叉树最多有 $2^k-1$ 个结点
 - 具有n个结点的二叉树，深度最少为 $int(log_2n)+1$
-- 非空二叉树中，叶子结点数等于度为2的结点数+1，$n_0=n_2+1$
-- 完全二叉树中，当结点总数为**奇数**时，没有度为1的结点（即$n_1=0$）；为**偶数**时，$n_1=1$
+- 非空二叉树中，叶子结点数等于度为2的结点数+1， $n_0=n_2+1$
+- 完全二叉树中，当结点总数为**奇数**时，没有度为1的结点（即 $n_1=0$ ）；为**偶数**时， $n_1=1$
 ## 二叉树的存储结构
 - 一般二叉树采用链式存储
 - 满二叉树和完全二叉树可采用**顺序存储**
